# WorkEase

./: AGENT_FRIENDLY_COMPLETE.md  AI_AGENT_ONBOARDING.md  AI_FEATURES.md  BACKEND_README.md  COMPLETION_SUMMARY.md  ENTERPRISE_UPGRADE_COMPLETE.md  FORGE_ENTERPRISE_FEATURES.md  FORGE_FRAMEWORK_SUMMARY.md  FUNCTION_INDEX.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  MASTER_INDEX.md  MIND_MODEL_COMPLETE.md  MIND_MODEL_ENTERPRISE.md  PROJECT_STATUS.md  PROJECT_TREE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  TYPES_INDEX.md  debug_slack_ai.py  demo_ai_summaries.py  forge.toml  gmail_read_send.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  slack_api_test.py
.kiro/specs/autoreturn/: LANGCHAIN_RAG_UPGRADE.md
DOCUMENTATION/: 01_PROJECT_VISION.md  02_PRD.md  03_USER_SPECIFICATIONS.md  04_SYSTEM_ARCHITECTURE.md  05_TECHNICAL_DESIGN.md  06_DATABASE_DESIGN.md  08_IMPLEMENTATION_GUIDE.md  09_CODING_STANDARDS.md  README.md
Gmail_Automation/: AutoReturn_Gmail_Automation.py  requirements.txt
UI/: ai_service.py  analytics_dialog.py  auth_dialog.py  autoreturn_app.py  gmail_integration.py  main.py  notification_dialog.py  profile_dialog.py  profile_integration_example.py  requirement.txt  settings_dialog.py  slack_integration.py  styles.py
UI_V2/: autoreturn_app.py  main.py  notification_dialog.py  requirement.txt  send_slack_message_dialog.py  slack_backend.py
UI_backend/: auth_dialog.py  gmail_integration.py  profile_dialog.py  profile_integration_example.py  quick_test.py  slack_backend.py  slack_integration.py  styles.py  test_ollama.py
UNDERSTANDING/: 1_FORGE_Framework.md  2_MIND_Model.md  3_Project_Implementation.md  FORGE_Framework_Comprehensive.md
agents/: __init__.py  base_agent.py  gmail_agent.py  slack_agent.py
algorithms/: __init__.py  task_extractor.py
config/: agents.yaml  config.yaml  langchain_config.yaml
core/: __init__.py  circuit_breaker.py  context_provider.py  dependency_injection.py  digest_generator.py  draft_manager.py  event_bus.py  health_check.py  langchain_orchestrator.py  learning_engine.py  llm.py  llm_client.py  main.py  middleware.py  models.py  multi_agent_coordinator.py  notification_hub.py  orchestrator.py  sentiment_analyzer.py  task_extractor.py
core/memory/: __init__.py  context_provider.py  langchain_memory.py  rag_provider.py
database/: __init__.py  memory.py
dev/specs/autoreturn/: ARCHITECTURE_SUMMARY.md  design.md  requirements.md  tasks.md
docs/: MODEL_SELECTION.md
examples/: message_processing_demo.py  simple_demo.py
extensions/: __init__.py
memory/: .context-schema.json
mind_model/: __init__.py  core.py
rules/: 00-START-HERE.md  AGENT_CODING_RULES.md  Cross-Platform-Rules.md  Development-Rules.yaml  Forge-Framework.md  Framework.yaml  General-Dev-Rules.md  General-Development-Rules.yaml  MIND-Model-Context-Rules.md  MIND-Model-Context.yaml  MIND-Model-Rules.md  MIND-Model-Rules.yaml  README.md  RULES_SUMMARY.md  validate_rules.py
ui/: __init__.py
voice/: __init__.py
